--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     new Chart(ctx2, {
         type: 'bar',
         data: {
-            labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Junho', 'Julho'],
+            labels: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho'],
             datasets: [
                 {
                     label: 'Temperatura média',
